fix gap between body and html on bottom half bby making app.parent height and width 100%

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -9,9 +9,50 @@
 
   --font-family: "Inter", sans-serif;
 }
+html,
+body,
+.app-parent {
+  width: 100%;
+  height: 100%;
+}
 body {
   background-color: var(--color-tertiary);
   color: var(--color-text-on-tertiary);
+  box-sizing: border-box;
+  font-family: "Ubuntu Light", "Century Gothic", sans-serif;
+  margin: 0;
+  padding: 0;
+  color: rgb(5, 5, 5);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 0%;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+#root {
+  grid-area: 1 / 1 / 2 / 2;
+}
+#modal-root {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+.app-parent {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 20% 1fr 5%;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.nav {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.home {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.foot {
+  grid-area: 3 / 1 / 4 / 2;
 }
 /* NAV BAR STYLING */
 .navbar {
@@ -29,22 +70,30 @@ body {
 .navbar li a {
   display: block;
   text-decoration: none;
-  margin: 5px 0 0;
   color: var(--color-text-on-secondary);
   border-right: 1px solid none;
+  margin-bottom: 5px;
 }
+.right-nav {
+  margin-left: 10px;
+}
+.left-nav {
+  margin-right: 10px;
+}
+/* FOOTER STYLING */
 .footer {
   display: flex;
   align-items: center;
   flex-direction: column;
+  line-height: normal;
 }
 /* STYLING FOR HOMEPAGE */
 /* https://www.freecodecamp.org/news/css-full-page-background-image-tutorial/ */
 /* https://www.developerdrive.com/full-page-hero-image-html-css/ */
 .homepage {
   position: relative;
-  width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -58,7 +107,7 @@ body {
   background: url(/Users/imma/Codesmith/Mid/solo-project/solo-project/client/homepage-image.jpeg);
   /* ensures background will not repeat */
   background-repeat: no-repeat;
-  /* background stays centered */
+  /* background stays centered  */
   background-position: center center;
   /* makes sure image stays in background */
   background-attachment: fixed;
@@ -110,12 +159,4 @@ body {
 
 label {
   font-weight: 600;
-}
-
-body {
-  box-sizing: border-box;
-  font-family: "Ubuntu Light", "Century Gothic", sans-serif;
-  margin: 0;
-  padding: 0;
-  color: rgb(5, 5, 5);
 }
